--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@lingui/react": "^2.7.2",
     "dompurify": "^1.0.4",
     "file-saver": "^2.0.0",
+    "iframe-resizer": "^4.3.2",
     "lodash": "^4.17.10",
+    "oauth-sign": "^0.9.0",
     "pretty-bytes": "^5.1.0",
     "query-string": "5",
     "react": "^16.7.0",
