--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@babel/helper-regex": "^7.10.5",
     "@instructure/ui-billboard": "^5.37.0",
     "@instructure/ui-breadcrumb": "^5.37.0",
     "@instructure/ui-buttons": "^5.37.0",
@@ -22,8 +23,8 @@
     "oauth-sign": "^0.9.0",
     "pretty-bytes": "^5.1.0",
     "query-string": "5",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "16",
+    "react-dom": "16",
     "react-github-corner": "^2.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
