--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-github-corner": "^2.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
+    "react-to-print": "^2.14.12",
     "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
